# coin_trading

./: trading_stratege.md  .cursorignore  .gitignore  COMPLETED.md  GEMINI.md  README.md  README_ko.md  TODO.md  backtester.py  binance_data.py  binance_data_improved.py  config.py  env.example  improved_live_trader.py  improved_strategy_factory.py  live_positions.json  live_trader_gpt.py  main.py  models.py  pyproject.toml  refactor_todo.md  state_manager.py  strategy.py  strategy_factory.py
_archive/: backtester.py  collect_and_grid_backtest.py  config.py  func_test.ipynb  legacy_signal.py  live_trader.py  main.py  optimize_params.py  position_sizer.py  test_legacy_configuration.py  trading_stratege.md
backtests/: composite_backtest.py
core/: configuration.py  constants.py  data_models.py  dependency_injection.py  error_handler.py  exceptions.py  position_manager.py
data/: BNBUSDT_5m.csv  BTCUSDT_5m.csv  ETHUSDT_5m.csv  SOLUSDT_5m.csv  XRPUSDT_5m.csv
data_providers/: __init__.py  base.py  binance_klines_strategy.py
strategies/: atr_trailing_stop_strategy.py  base_strategy.py  composite_signal_strategy.py
tests/: test_backtest_composite.py  test_backtest_logging.py  test_backtester.py  test_binance_data.py  test_composite_backtest_metrics.py  test_composite_strategy.py  test_configuration.py  test_constants.py  test_exceptions.py  test_improved_components.py  test_improved_live_trader.py  test_live_trader.py  test_live_trader_composite.py  test_live_trader_orders_integration.py  test_live_trader_partial_fills.py  test_live_trader_retry_idempotency.py  (+16 more)
(+66 files in other folders)
